--- a/pages/5329.html
+++ b/pages/5329.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a></strong></p>
@@ -345,7 +344,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
 </li>
 
 <li>
@@ -559,15 +558,15 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> is <strong>sifted</strong> if a <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a> <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>∈</mo><mi>sSet</mi></mrow><annotation encoding='application/x-tex'>K \in sSet</annotation></semantics></math> modelling it has the property that</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> is <strong>sifted</strong> if a <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a> <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>∈</mo><mi>sSet</mi></mrow><annotation encoding='application/x-tex'>K \in sSet</annotation></semantics></math> modelling it has the property that</p>
 
 <ol>
 <li>
-<p>it is not empty, <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>≠</mo><mi>∅</mi></mrow><annotation encoding='application/x-tex'>K \neq \emptyset</annotation></semantics></math></p>
+<p>it is not empty, <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>≠</mo><mi>∅</mi></mrow><annotation encoding='application/x-tex'>K \neq \emptyset</annotation></semantics></math></p>
 </li>
 
 <li>
-<p>The diagonal <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>→</mo><mi>K</mi><mo>×</mo><mi>K</mi></mrow><annotation encoding='application/x-tex'>K \to K \times K</annotation></semantics></math> (in <a class='existingWikiWord' href='/nlab/show/SimpSet'>sSet</a>) models a <a class='existingWikiWord' href='/nlab/show/final+%28infinity%2C1%29-functor'>cofinal (∞,1)-functor</a>.</p>
+<p>The diagonal <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>→</mo><mi>K</mi><mo>×</mo><mi>K</mi></mrow><annotation encoding='application/x-tex'>K \to K \times K</annotation></semantics></math> (in <a class='existingWikiWord' href='/nlab/show/SimpSet'>sSet</a>) models a <a class='existingWikiWord' href='/nlab/show/final+%28infinity%2C1%29-functor'>cofinal (∞,1)-functor</a>.</p>
 </li>
 </ol>
 </div>
@@ -577,9 +576,9 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='proposition'>Proposition</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> such that <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> preserve <a class='existingWikiWord' href='/nlab/show/sifted+%28infinity%2C1%29-colimit'>sifted (∞,1)-colimits</a> (for instance an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>, see <a class='existingWikiWord' href='/nlab/show/universal+colimit'>universal colimits</a>).</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> such that <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> preserve <a class='existingWikiWord' href='/nlab/show/sifted+%28infinity%2C1%29-colimit'>sifted (∞,1)-colimits</a> (for instance an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>, see <a class='existingWikiWord' href='/nlab/show/pullback-stable+colimit'>universal colimits</a>).</p>
 
-<p>Then <a class='existingWikiWord' href='/nlab/show/sifted+%28infinity%2C1%29-colimit'>sifted (∞,1)-colimits</a> preserve finite products.</p>
+<p>Then <a class='existingWikiWord' href='/nlab/show/sifted+%28infinity%2C1%29-colimit'>sifted (∞,1)-colimits</a> preserve <a class='existingWikiWord' href='/nlab/show/finite+product'>finite products</a>.</p>
 </div>
 
 <p>This is (<a href='#Lurie'>Lurie, lemma 5.5.8.11</a>).</p>
@@ -591,7 +590,7 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='proposition_2'>Proposition</h6>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/opposite+category'>opposite category</a> <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Δ</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>\Delta^{op}</annotation></semantics></math> of the <a class='existingWikiWord' href='/nlab/show/simplex+category'>simplex category</a> is a sifted <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/opposite+category'>opposite category</a> <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Δ</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>\Delta^{op}</annotation></semantics></math> of the <a class='existingWikiWord' href='/nlab/show/simplex+category'>simplex category</a> is a sifted <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category.</p>
 </div>
 
 <div class='num_prop'>
@@ -607,7 +606,7 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='proposition_4'>Proposition</h6>
 
-<p>In a category of commutative monoids in a symmetric monoidal <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category, sifted colimits are computed as sifted colimits in the underlying <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category.</p>
+<p>In a category of commutative monoids in a symmetric monoidal <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category, sifted colimits are computed as sifted colimits in the underlying <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category.</p>
 </div>
 
 <p>See <a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+a+symmetric+monoidal+%28infinity%2C1%29-category'>commutative monoid in a symmetric monoidal (∞,1)-category</a> for details.</p>
@@ -616,7 +615,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sifted+category'>sifted category</a>, <strong>sifted <math class='maruku-mathml' display='inline' id='mathml_363d31a7b63ce8743c54dc0308cd611a91ec846d_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category</strong></p>
+<p><a class='existingWikiWord' href='/nlab/show/sifted+category'>sifted category</a>, <strong>sifted <math class='maruku-mathml' display='inline' id='mathml_39f550b932412deda75e7ccbdf527da6bb6d2818_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category</strong></p>
 </li>
 
 <li>
@@ -645,19 +644,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May  4, 2012 00:25:53 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.201)
+  <p>
+  Last revised on June 14, 2018 at 04:31:45.
+  See the <a href="https://ncatlab.org/nlab/history/sifted (infinity,1)-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sifted+%28infinity%2C1%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sifted+%28infinity%2C1%29-category/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/sifted+%28infinity%2C1%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sifted+%28infinity%2C1%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/sifted+%28infinity%2C1%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sifted+%28infinity%2C1%29-category/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/sifted+%28infinity%2C1%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sifted+%28infinity%2C1%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/sifted (infinity,1)-category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/sifted+%28infinity%2C1%29-category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/sifted+%28infinity%2C1%29-category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/sifted+%28infinity%2C1%29-category" id="view_source" rel="nofollow">Source</a>
