--- a/pages/4610.html
+++ b/pages/4610.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -500,11 +499,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#properties'>Properties</a></li><li><a href='#see_also'>See also</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <em>sifted colimit</em> is a <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a> of a <a class='existingWikiWord' href='/nlab/show/diagram'>diagram</a> <math class='maruku-mathml' display='inline' id='mathml_514e51f25495d24a4d4800b1d79c0d2ebc22c38b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>D \to C</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_514e51f25495d24a4d4800b1d79c0d2ebc22c38b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/sifted+category'>sifted category</a> (in analogy with a <a class='existingWikiWord' href='/nlab/show/filtered+limit'>filtered colimit</a>, involving diagrams of shape a <a class='existingWikiWord' href='/nlab/show/filtered+category'>filtered category</a>). Such colimits commute with finite <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> in <a class='existingWikiWord' href='/nlab/show/Set'>Set</a> by definition.</p>
+<p>A <em>sifted colimit</em> is a <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a> of a <a class='existingWikiWord' href='/nlab/show/diagram'>diagram</a> <math class='maruku-mathml' display='inline' id='mathml_3eb83c79acf76d04da58d266cf07c625e5e00a41_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>D \to C</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_3eb83c79acf76d04da58d266cf07c625e5e00a41_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/sifted+category'>sifted category</a> (in analogy with a <a class='existingWikiWord' href='/nlab/show/filtered+limit'>filtered colimit</a>, involving diagrams of shape a <a class='existingWikiWord' href='/nlab/show/filtered+category'>filtered category</a>). Such colimits commute with finite <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> in <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, by definition.</p>
 
 <h2 id='examples'>Examples</h2>
 
-<p>A motivating example is a <a class='existingWikiWord' href='/nlab/show/reflexive+coequalizer'>reflexive coequalizer</a>. In fact, sifted colimits can “almost” be characterized as combinations of <a class='existingWikiWord' href='/nlab/show/filtered+limit'>filtered colimits</a> and reflexive coequalizers.</p>
+<p>A motivating example is a <a class='existingWikiWord' href='/nlab/show/reflexive+coequalizer'>reflexive coequalizer</a>. In fact, sifted colimits can “almost” be characterized as combinations of <a class='existingWikiWord' href='/nlab/show/filtered+limit'>filtered colimits</a> and reflexive coequalizers. (<a href='#AdamekRosickyVitale10'>Adamek-Rosicky-Vitale 10</a>)</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -519,9 +518,13 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>P. Gabriel and F. Ulmer, <em>Lokal präsentierbare Kategorien</em> , Springer LNM 221, Springer-Verlag 1971</li>
+<li id='GabrielUlmer71'>
+<p><a class='existingWikiWord' href='/nlab/show/Pierre+Gabriel'>Pierre Gabriel</a>, <a class='existingWikiWord' href='/nlab/show/Friedrich+Ulmer'>Friedrich Ulmer</a>, <em>Lokal präsentierbare Kategorien</em>, Springer LNM 221, Springer-Verlag 1971</p>
+</li>
 
-<li>J. Adamek, J. Rosicky, E.M. Vitale, <em>What are sifted colimits?</em>, TAC <strong>23</strong> (2010) pp. 251–260. (<a href='http://www.tac.mta.ca/tac/volumes/23/13/23-13abs.html'>web</a>)</li>
+<li id='AdamekRosickyVitale10'>
+<p><a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Ad%C3%A1mek'>Jiri Adamek</a>, <a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Rosick%C3%BD'>Jiri Rosicky</a>, <a class='existingWikiWord' href='/nlab/show/Enrico+Vitale'>Enrico Vitale</a>, <em>What are sifted colimits?</em>, TAC <strong>23</strong> (2010) pp. 251–260. (<a href='http://www.tac.mta.ca/tac/volumes/23/13/23-13abs.html'>web</a>)</p>
+</li>
 </ul>
 
 <p>
@@ -530,19 +533,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 16, 2015 20:08:56 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.128.80.155)
+  <p>
+  Last revised on June 14, 2018 at 04:53:34.
+  See the <a href="https://ncatlab.org/nlab/history/sifted colimit" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sifted+colimit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sifted+colimit/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/sifted+colimit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sifted+colimit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/sifted+colimit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sifted+colimit/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/sifted+colimit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sifted+colimit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/sifted colimit/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/sifted+colimit" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/sifted+colimit" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/sifted+colimit" id="view_source" rel="nofollow">Source</a>
