--- a/pages/4336.html
+++ b/pages/4336.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <strong>matrix</strong> is a <a class='existingWikiWord' href='/nlab/show/free+monoid'>list</a> of lists.</p>
+<p>A <strong>matrix</strong> is a function <math class='maruku-mathml' display='inline' id='mathml_d046d6f6e7983b68a06270f87ebfb7e819ea3e40_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi><mo>:</mo><mo stretchy='false'>[</mo><mi>n</mi><mo stretchy='false'>]</mo><mo>×</mo><mo stretchy='false'>[</mo><mi>m</mi><mo stretchy='false'>]</mo><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>M:[n]\times[m]\rightarrow X</annotation></semantics></math> from the Cartesian product <math class='maruku-mathml' display='inline' id='mathml_d046d6f6e7983b68a06270f87ebfb7e819ea3e40_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>n</mi><mo stretchy='false'>]</mo><mo>×</mo><mo stretchy='false'>[</mo><mi>m</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[n]\times[m]</annotation></semantics></math> to a set <math class='maruku-mathml' display='inline' id='mathml_d046d6f6e7983b68a06270f87ebfb7e819ea3e40_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 
 <p>Often one uses the term in a context where one can add and multiply matrices using <a class='existingWikiWord' href='/nlab/show/matrix+calculus'>matrix calculus</a>.</p>
 
@@ -360,19 +359,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 20, 2017 09:28:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.76.24.83)
+  <p>
+  Last revised on June 14, 2018 at 06:01:48.
+  See the <a href="https://ncatlab.org/nlab/history/matrix" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/matrix/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/matrix" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/matrix" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/matrix" id="view_source" rel="nofollow">Source</a>
