--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,25 +305,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_07130b98a3777af305926bd557c505cada3dc5e9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Π</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>Y</mi></mstyle><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><munder><mi>lim</mi><munder><mo>⟶</mo><mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></munder></munder><mstyle mathvariant='bold'><mi>Y</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  \Pi_0(\mathbf{Y})
-  \;=\;
-  \underset{\underset{\mathcal{C}^{op}}{\longrightarrow}}{\lim} \mathbf{Y}
-  \,.
+    <div class='maruku-equation' id='eq:SheafIsLocalObjectWithRespectToCechCovers'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_d068a2c731876392c5dfc24f6b128d26f82b4d11_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>Y</mi></mstyle><mspace width='thinmathspace'></mspace><mtext>is a sheaf</mtext><mphantom><mi>AA</mi></mphantom><mo>⇔</mo><mspace width='thinmathspace'></mspace><mtext>is iso, for all covering families</mtext><mspace width='thinmathspace'></mspace><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo>→</mo><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
+  
+  \mathbf{Y}
+  \,\text{is a sheaf}
+  \phantom{AA}
+  \Leftrightarrow
+  \, \text{is iso, for all covering families} \, \{U_i \to X\}
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 14, 2018 at 08:17:21.
+  Last revised on June 14, 2018 at 09:06:55.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1516" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1516 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1517" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1517 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
