--- a/pages/673.html
+++ b/pages/673.html
@@ -315,7 +315,7 @@ margin-left: 0em;
 
 <p>I was a Research Associate (i.e. a postdoc) at the University of Adelaide from October 2013 to April 2015. For the period July-2017 to February 2018 I was a Lecturer in the School of Mathematical Sciences.</p>
 
-<p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='https://publons.com/a/430214/'>Publons</a>|<a href='https://thehighergeometer.wordpress.com/'>theHigherGeometer</a></p>
+<p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://scholar.google.com.au/citations?user=KGianq8AAAAJ&amp;hl=en'>Google Scholar</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='https://publons.com/a/430214/'>Publons</a>|<a href='https://thehighergeometer.wordpress.com/'>theHigherGeometer</a></p>
 
 <p>If you need it, here is my email: droberts.[fifth and largest-known <a class='existingWikiWord' href='/nlab/show/Fermat+number'>Fermat prime</a>]@gmail.[etc]</p>
 
@@ -402,11 +402,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_c27a058666dbf52b14905a137e68d2a4a6423625_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_26d01d5ba1d5304b89ff07c6fc7a79ef0922c966_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_c27a058666dbf52b14905a137e68d2a4a6423625_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_26d01d5ba1d5304b89ff07c6fc7a79ef0922c966_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -525,14 +525,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 14, 2018 at 22:34:10.
+  Last revised on June 15, 2018 at 02:30:03.
   See the <a href="https://ncatlab.org/nlab/history/David Roberts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/154" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(154 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/155" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(155 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/David Roberts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
