--- a/pages/1788.html
+++ b/pages/1788.html
@@ -306,26 +306,23 @@ margin-left: 0em;
 
 <div id="revision">
     <div class='maruku-equation'><code class='maruku-mathml'>
-  \underset{\underset{CartSp^{op}}{\longrightarrow}}{\lim}
-  C(\{U_i\}_i)
-  &amp; \simeq
-  \left( 
-  \right)
-  \,.
+  &amp;&amp; X
+  \\
+  &amp; {}^{\mathllap{ \eta_X }}\swarrow &amp;&amp; \searrow^{\mathrlap{f}}
 
 </code></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 14, 2018 at 10:04:56.
+  Last revised on June 15, 2018 at 03:43:10.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1518" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1518 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1519" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1519 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
