--- a/pages/11723.html
+++ b/pages/11723.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -326,10 +325,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -515,7 +514,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -526,9 +525,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_2'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Given a <a class='existingWikiWord' href='/nlab/show/modality'>modal operator</a> <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>, then a <a class='existingWikiWord' href='/nlab/show/type'>type</a> <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> may be called <em><math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>-comodal</em> or <em><math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>-connected</em> if <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mi>X</mi><mo>≃</mo><mo>*</mo></mrow><annotation encoding='application/x-tex'>\bigcirc X \simeq \ast</annotation></semantics></math> (the <a class='existingWikiWord' href='/nlab/show/unit+type'>unit type</a>).</p>
+<p>Given a <a class='existingWikiWord' href='/nlab/show/modality'>modal operator</a> <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>, then a <a class='existingWikiWord' href='/nlab/show/type'>type</a> <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> may be called <em><math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>-comodal</em> or <em><math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>-connected</em> if <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mi>X</mi><mo>≃</mo><mo>*</mo></mrow><annotation encoding='application/x-tex'>\bigcirc X \simeq \ast</annotation></semantics></math> (the <a class='existingWikiWord' href='/nlab/show/unit+type'>unit type</a>).</p>
 
-<p>Since a type <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> is called a <em><math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/modal+type'>modal type</a></em> if <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mi>Y</mi><mo>≃</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>\bigcirc Y \simeq Y</annotation></semantics></math>, being comodal is in a sense the opposite extreme of being modal.</p>
+<p>Since a type <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> is called a <em><math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo></mrow><annotation encoding='application/x-tex'>\bigcirc</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/modal+type'>modal type</a></em> if <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mi>Y</mi><mo>≃</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>\bigcirc Y \simeq Y</annotation></semantics></math>, being comodal is in a sense the opposite extreme of being modal.</p>
 
 <p>In as far as <a class='existingWikiWord' href='/nlab/show/modality'>modal operators</a> have <a class='existingWikiWord' href='/nlab/show/categorical+semantics'>categorical semantics</a> as <a class='existingWikiWord' href='/nlab/show/idempotent+monad'>idempotent (co-)-monads</a>/<a class='existingWikiWord' href='/nlab/show/idempotent+%28infinity%2C1%29-monad'>idempotent (∞,1)-(co-)monads</a> anti-modal types are familiar in <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> as forming <a class='existingWikiWord' href='/nlab/show/localizing+subcategory'>localizing subcategories</a>.</p>
 
@@ -536,7 +535,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mo>=</mo><mi>n</mi><mo>≔</mo><msub><mi>τ</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>\bigcirc = n \coloneqq \tau_n</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/truncated+object'>n-truncation</a> modality, then <em><math class='maruku-mathml' display='inline' id='mathml_01c6f91b4d57d6db8543a93ac054512bde8c686b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-comodal</em> is indeed <em><a class='existingWikiWord' href='/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos'>n-connected</a></em>, by <a href='n-connected+object+of+an+%28infinity%2C1%29-topos#ConnectednessViaTruncationComodalness'>this proposition</a>.</p>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mo>=</mo><mi>n</mi><mo>≔</mo><msub><mi>τ</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>\bigcirc = n \coloneqq \tau_n</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/truncated+object'>n-truncation</a> modality, then <em><math class='maruku-mathml' display='inline' id='mathml_ea6c4dfe414a93a46d946e7d25235a15fcdecf44_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-comodal</em> is indeed <em><a class='existingWikiWord' href='/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos'>n-connected</a></em>, by <a href='n-connected+object+of+an+%28infinity%2C1%29-topos#ConnectednessViaTruncationComodalness'>this proposition</a>.</p>
 </li>
 
 <li>
@@ -571,22 +570,27 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2017 08:56:04 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  <p>
+  Last revised on June 15, 2018 at 08:44:00.
+  See the <a href="https://ncatlab.org/nlab/history/comodal type" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/comodal+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/comodal+type/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/comodal+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/comodal+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/comodal+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/comodal+type/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/comodal+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/comodal+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/comodal type/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/comodal+type" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/comodal+type" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/comodal+type" id="view_source" rel="nofollow">Source</a>
