--- a/pages/19473.html
+++ b/pages/19473.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8639/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8639/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,25 +311,37 @@ margin-left: 0em;
 
 <p>A <strong>graded modality</strong> is an indexed family of modalities with some additional structure on the indices which mirrors the structure of the axioms/proof rules.</p>
 
-<p>For example, the <a class='existingWikiWord' href='/nlab/show/%21-modality'>exponential modality</a> of <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a> <math class='maruku-mathml' display='inline' id='mathml_e91b0e7ac7155a072bd7fa65bbfb6735971612af_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> has a graded counterpart in Bounded Linear Logic, where <math class='maruku-mathml' display='inline' id='mathml_e91b0e7ac7155a072bd7fa65bbfb6735971612af_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> is replaced with a family of modalities <math class='maruku-mathml' display='inline' id='mathml_e91b0e7ac7155a072bd7fa65bbfb6735971612af_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>!</mo> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>!_n</annotation></semantics></math> indexed by the natural numbers (the reuse bound).</p>
+<p>For example, the <a class='existingWikiWord' href='/nlab/show/%21-modality'>exponential modality</a> of <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a> <math class='maruku-mathml' display='inline' id='mathml_9505db6fb80da3e001ca7efc8a85e3fe1e1074be_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> has a graded counterpart in Bounded Linear Logic, where <math class='maruku-mathml' display='inline' id='mathml_9505db6fb80da3e001ca7efc8a85e3fe1e1074be_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>!</mo></mrow><annotation encoding='application/x-tex'>!</annotation></semantics></math> is replaced with a family of modalities <math class='maruku-mathml' display='inline' id='mathml_9505db6fb80da3e001ca7efc8a85e3fe1e1074be_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>!</mo> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>!_n</annotation></semantics></math> indexed by the natural numbers (the reuse bound).</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
 <li>Dominic Orchard, Vilem-Benjamin Liepelt, <em>Gram: A linear functional language with graded modal types</em>, (<a href='https://www.cs.ox.ac.uk/conferences/fscd2017/preproceedings_unprotected/TLLA_Orchard.pdf'>extended abstract</a>)</li>
 </ul>
+
+<p>In philosophy and linguistics, see</p>
+
+<ul>
+<li>
+<p>Patrick Grosz, <em>Grading Modality: A New Approach to Modal Concord and its Relatives</em>, (<a href='https://www.univie.ac.at/sub14/proc/grosz.pdf'>paper</a>)</p>
+</li>
+
+<li>
+<p>Daniel Lassiter, <em>Graded modality</em>, (<a href='https://web.stanford.edu/~danlass/Lassiter-graded-modality-draft.pdf'>paper</a>)</p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on June 20, 2018 at 04:27:28.
+  Last revised on June 20, 2018 at 05:48:20.
   See the <a href="https://ncatlab.org/nlab/history/graded modality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graded+modality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/graded+modality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graded+modality/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/graded+modality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graded+modality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/graded modality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
